# functionalFood/app/Models/UserAddress.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class UserAddress extends Model
+{
+    //
+    protected $fillable = [
+        'user_id',
+        'name',
+        'phone',
+        'address',
+        'is_default',
+    ];
+}
